# timer

./: README.md  meson.build
data/: com.github.volfpeter.timer.appdata.xml  com.github.volfpeter.timer.appdata.xml.in  com.github.volfpeter.timer.desktop  com.github.volfpeter.timer.desktop.in  gschema.xml  meson.build  post_install.py
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.volfpeter.timer.pot  de.po  es.po  fr.po  hu.po  it.po
po/extra/: POTFILES  extra.pot  fr.po
src/: TimerApp.vala  meson.build
